--- a/artifex-site/index.html
+++ b/artifex-site/index.html
@@ -1,16 +1,52 @@
+<!DOCTYPE html>
+<html lang="pt_br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./src/assets/logo.svg" />
+    <title>ArtifexTech</title>
 
-  <!DOCTYPE html>
-  <html lang="pt_br">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="icon" type="image/png" href="./src/assets/logo.svg">
-      <title>ArtifexTech</title>
-    </head>
+    <!-- Fonte Quicksand -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
-    <body>
-      <div id="root"></div>
-      <script type="module" src="/src/main.tsx"></script>
-    </body>
-  </html>
-  
+    <!-- Preview -->
+    <!-- Open Graph - Artifex Tech: Automação Residencial -->
+    <meta
+      property="og:title"
+      content="Artifex Tech | Tecnologia feita por Artífices"
+    />
+    <meta
+      property="og:description"
+      content="Transforme sua casa com automação residencial! Controle luzes, energia, segurança via app. Projetos com ESP8266, medidores de energia, IoT, Docker e impressão 3D. Personalizado pra você!"
+    />
+    <meta
+      property="og:image"
+      content="https://www.artifextech.com.br/preview.png"
+    />
+    <meta property="og:url" content="https://artifextech.com.br" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Artifex Tech" />
+
+    <!-- Twitter (WhatsApp também lê) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Artifex Tech | Tecnologia feita por Artífices"
+    />
+    <meta
+      name="twitter:description"
+      content="Transforme sua casa com automação residencial! Controle luzes, energia, segurança via app. Projetos com ESP8266, medidores de energia, IoT, Docker e impressão 3D. Personalizado pra você!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.artifextech.com.br/preview.png"
+    />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
